--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@angular/core": "~12.2.1",
     "@angular/forms": "~12.2.1",
     "@angular/material": "^12.2.1",
+    "@angular/material-moment-adapter": "^13.0.2",
     "@angular/platform-browser": "~12.2.1",
     "@angular/platform-browser-dynamic": "~12.2.1",
     "@angular/router": "~12.2.1",
     "@auth0/angular-jwt": "^5.0.1",
     "moment": "^2.29.1",
+    "pdfmake": "^0.2.4",
+    "pdfmake-wrapper": "^2.1.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.2.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -31,9 +35,10 @@
     "@angular-devkit/build-angular": "~12.2.1",
     "@angular/cli": "~12.2.1",
     "@angular/compiler-cli": "~12.2.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "@types/pdfmake": "^0.1.19",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
